--- a/pom.xml
+++ b/pom.xml
@@ -18,14 +18,30 @@
   </build>
   <dependencies>
   <dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi</artifactId>
+    <version>3.10-FINAL</version>
+</dependency>
+    <dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi-ooxml</artifactId>
+    <version>3.10-FINAL</version>
+</dependency>
+  <dependency>
     <groupId>org.jsoup</groupId>
     <artifactId>jsoup</artifactId>
     <version>1.8.3</version>
 </dependency>
-<dependency>
-       <groupId>io.ddavison</groupId>
-       <artifactId>conductor</artifactId>
-       <version>1.1</version>
-   </dependency>
+			<dependency>
+                <groupId>org.seleniumhq.selenium</groupId>
+                <artifactId>selenium-server</artifactId>
+                <version>3.0.1</version>
+            </dependency>
+            <dependency>
+            
+		    <groupId>net.sourceforge.htmlunit</groupId>
+		    <artifactId>htmlunit</artifactId>
+		    <version>2.26</version>
+		</dependency>
   </dependencies>
 </project>
